# robotic_microsurgery_automation

./: README.md
SmarAct_CppBinding/: CMakeLists.txt
SmarAct_CppBinding/Binding/: smaract.cpp  smaract_main.cpp
SmarAct_CppBinding/Cpp/include/headers/: MCSControl.h  smaract.h
SmarAct_CppBinding/Cpp/src/: smaract.cpp
Software/: SmarAct.cp310-win_amd64.pyd  asm.py  auxiliary.py  computer_vision.py  configuration.py  deep_network.py  gamepad.py  gui.py  pistage.py  run.py  worker_threads.py
Software/asm/: asm.ino
